# WebCrawler2BigQuery

./: .gitignore  README.md  csv2bq.dig  get_stock_info.py  main.py  ptt.py  setup.cfg  setup.py
ad_hoc/get_stock_list_jupyter/bq_schema/: stock_list.sql
bqcrawer/config/schemas/: stock.json
bqcrawer/core/: get_stock_no.py
bqcrawer/task/operator/: get_stock_info.py  stock.py
bqcrawer/task/utils/: exporter.py
bqcrawler/: get_ptt_stock.py  get_stock_info.py
bqcrawler/config/schemas/: stock.json
bqcrawler/core/PTT/: get_ptt_stock.py
bqcrawler/core/TWSE/: operator.py
bqcrawler/core/bigquery/: operator.py
bqcrawler/core/get_stock_list/: operator.py
bqcrawler/core/utils/: exporter.py
bqcrawler/task/: validator.py
bqcrawler/task/operator/: PTTStockTitle.py  TWSEStockInfo.py  est.py  get_TWSE_info.py  get_ptt_stock.py  get_stock_info.py  main.py
bqcrawler/task/taiwan_stock/: operator.py
bqcrawler/task/utils/: exporter.py  handler.py
get_ptt_stock/: get_ptt.ipynb
get_stock_list_jupyter/jupyter/: get_stock_list.ipynb  stock_list.csv
