[metadata]
name = bqcrawler
version = 1.0.0
long_description = file: README.md

[options]
package_dir =
    = .
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    google-cloud-bigquery==2.30.0
    pytz==2021.3

[options.package_data]
* = *.json, *.ini, *.sql

[options.packages.find]
where = .
